Fix pywin32 dependency for Linux deploy

--- a/requirements.txt
+++ b/requirements.txt
@@ -56,7 +56,7 @@ pyngrok==7.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 pytz==2025.1
-pywin32==310
+pywin32==310; sys_platform == "win32"
 PyYAML==6.0.2
 pyzmq==26.3.0
 qrcode==8.2
